// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should render the expandable row 1`] = `
<div>
  <div
    class="data-table-row expandable  svelte-5z2pxy"
  >
    <div
      class="row-content svelte-5z2pxy"
      data-testid="row-content"
    >
      <div
        class="svelte-cy4end"
        data-testid="expandable-icon"
      >
        <div
          class=" svelte-zpbvvv"
          style="--icon-width: 24px; --icon-height: 24px;"
        >
          <object
            src="ic-expandable.svg/"
          />
        </div>
      </div>
       
    </div>
     
    <div
      class="expandable-content svelte-5z2pxy"
      data-testid="expandable-content"
    />
  </div>
</div>
`;

exports[`Row should render the expanded expandable row 1`] = `
<div>
  <div
    class="data-table-row expandable expanded svelte-5z2pxy"
  >
    <div
      class="row-content svelte-5z2pxy"
      data-testid="row-content"
    >
      <div
        class="svelte-cy4end"
        data-testid="expandable-icon"
      >
        <div
          class=" svelte-zpbvvv"
          style="--icon-width: 24px; --icon-height: 24px;"
        >
          <object
            src="ic-contractable.svg/"
          />
        </div>
      </div>
       
    </div>
     
    <div
      class="expandable-content svelte-5z2pxy"
      data-testid="expandable-content"
    />
  </div>
</div>
`;

exports[`Row should render the non-expandable row by default 1`] = `
<div>
  <div
    class="data-table-row   svelte-5z2pxy"
  >
    <div
      class="row-content svelte-5z2pxy"
      data-testid="row-content"
    >
       
    </div>
     
  </div>
</div>
`;
